--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,162 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
+*{
+  margin: 0px;
+  padding: 0px;
   box-sizing: border-box;
+}
+
+/* shape divider */
+
+.custom-shape-divider-top-1646378330 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+}
+
+.custom-shape-divider-top-1646378330 svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 144px;
+}
+
+.custom-shape-divider-top-1646378330 .shape-fill {
+  fill: #FFFFFF;
+}
+
+/* bottom svg */
+
+.custom-shape-divider-bottom-1646378505 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+}
+
+.custom-shape-divider-bottom-1646378505 svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 144px;
+}
+
+.custom-shape-divider-bottom-1646378505 .shape-fill {
+  fill: #FFFFFF;
+}
+
+.header-container{
+  background-color: #FFA836;
+}
+.header-logo{
+ font-size:50px;
+ padding-left:24px
+}
+.header-heading{
+  font-size:36px;
+  padding-top:16px;
+ 
+}
+.header-input{
+  border-radius:32px;
+  margin-top:16px;
+}
+.header-btn-display{
+  display:flex;
+}
+.header-btn{
+  margin-top:16px;
+  background-color: #FF007F;
+  border-radius:24px;
+  margin-left:12px;
+  color:white;
+  font-size: 16px;
+}
+.header-btn-icon{
+  font-size:16px;
+  padding-top:5px
+}
+.header-btn:hover{
+opacity:0.7;
+color:black
+}
+.header-btn-inside{
+  display: flex;
+}
+.navbar-btn{
+  background-color: #FF007F;
+  border-radius: 16px;
+  color:white;
+}
+.navbar-btn:hover{
+  opacity:0.7;
+color:black
+}
+.home-heading-1{
+  font-size:28px;
+  margin-top:80px;
+  margin-bottom:24px;
+  background-color: #FF007F;
+  border-radius: 16px;
+  color:white;
+  width:500px;
+}
+.home-heading-1:hover{
+  color:black !important;
+}
+.home-heading-2{
+  font-size:28px;
+  margin-top:32px;
+  margin-bottom:24px;
+  background-color: #FF007F;
+  border-radius: 16px;
+  color:white;
+  width:500px;
+}
+.inside-btn{
+  display: flex;
+  justify-content: space-between;
+}
+.top-pick-carousel-col{
+  margin-top:24px;
+  margin-bottom:24px;
+  
+}
+.card-display{
+  border-radius: 24px !important;
+  margin-bottom:80px;
+}
+.top-pick-carousel-col:hover{
+  opacity:0.9;
+}
+.top-pick-image{
+  width:100%;
+  height:200px;
+  object-fit: fill;
+  border-radius: 24px;
+}
+.top-pick-row{
+  margin-top:16px;
+  /* background-color: #f39f86; */
+  background-color: #f39f86;
+background-image: linear-gradient(315deg, #f39f86 0%, #f9d976 74%);
+position:relative;
+}
+.video-tag{
+  width:100%;
+  height:200px;
+
+}
+@media only screen and (max-width:540px){
+  .header-logo{
+    font-size:50px;
+    padding-left:0px
+   }
+   .header-heading{
+     padding-left:15px;
+   }
 }
